[gd_scene load_steps=3 format=3 uid="uid://hawyj0b52iwd"]

[ext_resource type="Script" uid="uid://1b1bjnvf6u0h" path="res://visuals/start_menu.gd" id="1_1on3q"]
[ext_resource type="Texture2D" uid="uid://b7agttxisqrc5" path="res://art/menu/start_menu_background.png" id="1_qtro5"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1on3q")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(256, 256)
texture = ExtResource("1_qtro5")

[node name="VButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -50.5
offset_right = 112.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="VButtonContainer"]
layout_mode = 2
text = "Nueva partida"

[node name="ResumeGame" type="Button" parent="VButtonContainer"]
layout_mode = 2
text = "Continuar partida guardada"

[node name="DeleteGame" type="Button" parent="VButtonContainer"]
layout_mode = 2
text = "Eliminar partida guardada"

[node name="CloseApp" type="Button" parent="VButtonContainer"]
layout_mode = 2
text = "Cerrar"

[connection signal="pressed" from="VButtonContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VButtonContainer/ResumeGame" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="VButtonContainer/DeleteGame" to="." method="_on_delete_game_pressed"]
[connection signal="pressed" from="VButtonContainer/CloseApp" to="." method="_on_close_app_pressed"]
